Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86518

QSystemTrayIcon menu is not opened on press

XMLWordPrintable

    • macOS
    • fce391fefb0bbdea220aa2c935ca6f154f6121cf (qt/qtbase/dev) a6a8a4e06e435885a86516a63745f743944187ae (qt/qtbase/6.0) ca9a971c0ab9a0da1aff5f71a59a2c442885eb02 (qt/tqtc-qtbase/tqtc/lts-5.15)

      On macOS the tray icon menu is not shown on mouse press anymore. It is instead shown on mouse release.
       

      The documentation states, that it should be shown on press:
      QSystemTrayIcon Note: On macOS, a double click will only be emitted if no context menu is set, since the menu opens on mouse press

       

      It was working correctly in Qt 5.14.2.

        1. TrayIconTest.zip
          2 kB
          Victor Jungbluth
        For Gerrit Dashboard: QTBUG-86518
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            vjungbluth Victor Jungbluth
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes